docs: Add BearerAuth security definition
- Updated swagger.json
- Updated swagger.yaml
- Added security definition to docs.go
- Added security definition to main.go
