# cmd/api/main.go
@@ -19,6 +19,10 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and a JWT.
 func main() {
 	// Load configuration
 	cfg, err := config.LoadConfig(".")
